@@ -78,3 +78,10 @@ INSTALL( FILES guayadeque.desktop DESTINATION share/applications )
 INSTALL( FILES guayadeque.png DESTINATION share/pixmaps/ )
 INSTALL( FILES guayadeque.default.conf DESTINATION share/guayadeque )
 
+CONFIGURE_FILE(
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+  IMMEDIATE @ONLY)
+
+ADD_CUSTOM_TARGET(uninstall
+  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
